Fix a bug where placeholder image blocks were the wrong size
When you loaded the page on mobile, the solid colour rectangles that
appear before images load would appear… but in the wrong size.

The problem is that:

* By default, `.bk_t.ar_p` (portrait thumbnail wrapper) has `height: 130px`
* On mobile, the `<img>` is made slightly bigger with `height: 150px`

But I wasn't updating the `.bk_t.ar_p`, so the image was overflowing its
container and the placeholder block of colour.  Making the heights
consistent should fix that.

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -274,7 +274,7 @@ hr {
 @media screen and (max-width: 500px) {
   ul.review_previews > li a {
     grid-template-columns: auto;
-    grid-row-gap: 1.75em;
+    grid-row-gap: 0.75em;
   }
 
   ul.review_previews > li img {
@@ -287,6 +287,10 @@ hr {
     margin-bottom: 10px;
     grid-column: 1/1;
     grid-row: 1/2;
+  }
+  
+  .bk_t.ar_p {
+    height: 150px;
   }
 
   .bk_m {
